tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__GlowingMarshmall-AAAAAAAAAAAAAAAAAAAFzg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1486,
  "prerequisites": [
    1484
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Next step is heating up your Marshmallow in an Electric Blast Furnace at 4500K with some radon gas and making it glow.\n\nNow you'll get a Paralysis II effect in addition to the others.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Glowing Marshmallow",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1484
  ],
  "rewards": [],
  "tasks": []
}
