tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__Honeyforsugar-AAAAAAAAAAAAAAAAAAAFAw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1283,
  "prerequisites": [
    1284
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Since honey contains a lot of sugar, it might be a good idea to get some honey.\n\n[note]Just having the fluid in cells or buckets in your inventory lets the quest detect and consume it.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Honey for sugar.",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1284
  ],
  "rewards": [],
  "tasks": []
}
