tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__ILikeBigSandwich-AAAAAAAAAAAAAAAAAAAHPw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1855,
  "prerequisites": [
    637
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you have dough, there are several options for large sandwiches. They offer great saturation restoration and are easy to make.\n\nThe veggie and cheese options aren't quite as good and need more work to produce.\n\nThere are also normal-sized varieties of these sandwiches if you need more diet choices.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "I Like Big Sandwiches",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    637
  ],
  "rewards": [],
  "tasks": []
}
