tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__Juice-AAAAAAAAAAAAAAAAAAAEPg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1086,
  "prerequisites": [
    444
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Most of your berries can be extracted to juice form. This is a chance to get more food variants and the nutritional value is higher than eating the fruit directly.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Juice",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    444
  ],
  "rewards": [],
  "tasks": []
}
