tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__JustCoverYourPri-AAAAAAAAAAAAAAAAAAAHiQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1929,
  "prerequisites": [
    1928
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Reactoria crops will drop Reactoria leaves which will 4x your Pitchblende ore.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Just Cover Your Privates When You Walk By",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1928
  ],
  "rewards": [],
  "tasks": []
}
